--- a/SCP.html
+++ b/SCP.html
@@ -27,42 +27,24 @@
     margin-bottom: 25px;
     box-sizing: border-box;
   }
-.accordion-container {
-  display: flex;
-  flex-direction: column; /* empile les boutons verticalement */
-  width: 200px; /* largeur fixe ou ajustable */
-  gap: 8px; /* espace entre les boutons */
-}
-
-.accordion-button {
-  background-color: #333;
-  color: white;
-  border: none;
-  padding: 12px 16px;
-  text-align: left;
-  cursor: pointer;
-  font-weight: bold;
-  border-radius: 4px;
-  transition: background-color 0.3s;
-  width: 100%; /* prend toute la largeur du container */
-}
-
-.accordion-button:hover {
-  background-color: #555;
-}
-
-.accordion-content {
-  display: none;
-  padding: 10px 16px;
-  background-color: #222;
-  color: #ddd;
-  border-radius: 0 0 4px 4px;
-  margin-bottom: 12px;
-}
-
-.accordion-content.active {
-  display: block;
-}
+  .accordion {
+    background-color: #222;
+    color: #eee;
+    cursor: pointer;
+    padding: 15px 20px;
+    margin-bottom: 5px;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 1.2rem;
+    transition: background-color 0.3s ease;
+    border-radius: 5px;
+  }
+  .accordion:hover,
+  .accordion.active {
+    background-color: #ff4444;
+    color: white;
+  }
   .panel {
     background-color: #333;
     max-height: 0;
@@ -122,9 +104,8 @@
   </header>
 <input type="text" id="searchInput" placeholder="Rechercher un SCP (ex : 106, 049, 682, etc.)" />
 
-<div class="accordion-container">
-  <button class="accordion-button" onclick="toggleAccordion(this)">SCP-106</button>
-  <div class="accordion-content">
+<button class="accordion">SCP-106</button>
+<div class="panel">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vos cible principale sont les hommes, si le choix s’offre à vous, sinon tuer le premier qui se présente devant vous.</li>
@@ -140,8 +121,7 @@
   </ul>
 </div>
 
-<button class="accordion-button" onclick="toggleAccordion(this)">SCP-682</button>
-<div class="accordion-content">
+<button class="accordion">SCP-682</button>
 <div class="panel">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
@@ -157,8 +137,7 @@
   </ul>
 </div>
 
-<button class="accordion-button" onclick="toggleAccordion(this)">SCP-939</button>
-<div class="accordion-content">
+<button class="accordion">SCP-939</button>
 <div class="panel">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
@@ -316,10 +295,18 @@
 
 <script>
   // Accordéon
-function toggleAccordion(button) {
-  const content = button.nextElementSibling;
-  content.classList.toggle('active');
-}
+  const accordions = document.querySelectorAll('.accordion');
+  accordions.forEach(acc => {
+    acc.addEventListener('click', () => {
+      acc.classList.toggle('active');
+      const panel = acc.nextElementSibling;
+      if (panel.style.maxHeight) {
+        panel.style.maxHeight = null;
+      } else {
+        panel.style.maxHeight = panel.scrollHeight + 'px';
+      }
+    });
+  });
 
   // Filtre de recherche
   const searchInput = document.getElementById('searchInput');
