--- a/SCP.html
+++ b/SCP.html
@@ -68,6 +68,13 @@
     margin-bottom: 10px;
     padding-left: 20px;
   }
+  .accordion-image {
+  width: 150px;
+  max-width: 100%;
+  border-radius: 4px;
+  object-fit: cover;
+  }
+  
 </style>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/style_menu.css" />
@@ -106,6 +113,7 @@
 
 <button class="accordion">SCP-106</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp106.png" alt="Image SCP-106">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vos cible principale sont les hommes, si le choix s’offre à vous, sinon tuer le premier qui se présente devant vous.</li>
@@ -123,6 +131,7 @@
 
 <button class="accordion">SCP-682</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp682.png" alt="Image SCP-682">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous vous attaquez à tous les humains qui passent devant vous.</li>
@@ -139,6 +148,7 @@
 
 <button class="accordion">SCP-939</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp939.png" alt="Image SCP-939">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous ciblez tout ce qui fait du bruit (tout ce qui apparaît sur votre écran).</li>
@@ -157,6 +167,7 @@
 
 <button class="accordion">SCP-096</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp096.png" alt="Image SCP-096">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous ne vous attaquez seulement à ceux qui vous ont regardé ou qui vous bloquent le chemin lors de votre rage.</li>
@@ -175,6 +186,7 @@
 
 <button class="accordion">SCP-035</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp035.png" alt="Image SCP-035">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous êtes bien évidemment intelligent. Vous avez de nombreuses connaissances sur la Fondation-SCP dont les autres SCP et comment y survivre.</li>
@@ -195,6 +207,7 @@
 
 <button class="accordion">SCP-066</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp066.png" alt="Image SCP-066">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous êtes sourd aux ordres.</li>
@@ -207,6 +220,7 @@
 
 <button class="accordion">SCP-966</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp966.png" alt="Image SCP-966">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous êtes invisible sauf si vous êtes très proche d’une lumière, ne vous montrez pas, chassez la nuit.</li>
@@ -221,6 +235,7 @@
 
 <button class="accordion">SCP-049</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp049.png" alt="Image SCP-049">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous devez guérir tous les humains que vous rencontrez en utilisant votre touche spéciale.</li>
@@ -237,6 +252,7 @@
 
 <button class="accordion">SCP-049-2</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp049-2.png" alt="Image SCP-049-2">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous êtes sous le contrôle de SCP-049.</li>
@@ -252,6 +268,7 @@
 
 <button class="accordion">SCP-999</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp999.png" alt="Image SCP-999">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous êtes pacifique et joyeux.</li>
@@ -266,6 +283,7 @@
 
 <button class="accordion">SCP-173</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp173.png" alt="Image SCP-173">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous ne bougez que quand personne ne vous regarde.</li>
@@ -282,6 +300,7 @@
 
 <button class="accordion">SCP-1123</button>
 <div class="panel">
+  <img class="accordion-image" src="scp_images/scp1123.png" alt="Image SCP-1123">
   <p class="subheading">Point de vue du SCP :</p>
   <ul>
     <li>Vous êtes passif et ne devez pas attaquer sauf si on vous dérange directement.</li>
