--- a/SCP.html
+++ b/SCP.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta property="og:image" content="logo.png" />
+<meta property="og:title" content="Bienvenue sur Gates Zone-74" />
+<meta property="og:description" content="Serveur SCP-RP Gates Zone-74 - Découvrez les départements, le règlement et plus encore." />
 <link rel="icon" href="logo.png" type="image/png">
 <link rel="stylesheet" href="assets/css/theme.css">
 <title>Règlement SCP - Serveur SCP</title>
